0x07-python-test_driven_development/tests/0-add_integer.txt
The ``0-add_integer`` module
======================

Using ``add_integer``
-------------------

This imports text file in for function add_integer.  First import
``add_integer`` from the ``0-add_integer`` module:

    >>> add_integer = __import__('0-add_integer').add_integer

Now use it:

>>> add_integer(2, 5)
7
>>> add_integer(1.5, 1.5)
3
>>> add_integer(-2, 5)
3
>>> add_integer(-10, 5)
-5
>>> add_integer(-10, -5)
-15
>>> add_integer(-10, a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> add_integer(-10, 'a')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vagrant/holbertonschool-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 12, in add_integer
    raise TypeError('b must be an integer')
TypeError: b must be an integer
>>> add_integer(10, 0)
10
>>> add_integer(10,)
108
>>> add_integer(,10)
  File "<stdin>", line 1
    add_integer(,10)
                ^
SyntaxError: invalid syntax
